--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mitchell-merry/srcom-data-generator#readme",
   "dependencies": {
     "@types/prompt-sync": "^4.1.1",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.0.0",
     "googleapis": "^98.0.0",
     "node-fetch": "^3.2.3",
