--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
         "noImplicitAny": true,
         "strictNullChecks": true,
         
-        "outDir": "./build"
-    
+        "outDir": "./build",
+        "typeRoots": [
+            "./node_modules/@types",
+            "./src/types"
+        ]
     }
 }
