--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   },
   "homepage": "https://github.com/mitchell-merry/srcom-data-generator#readme",
   "dependencies": {
-    "@types/prompt-sync": "^4.1.1",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.0.0",
     "googleapis": "^98.0.0",
     "node-fetch": "^3.2.3",
     "prompt-sync": "^4.2.0",
-    "typescript": "^4.6.3"
+    "src-ts": "^1.0.0"
   },
   "devDependencies": {
     "@types/gapi": "^0.0.41",
     "@types/node": "^17.0.23",
-    "@types/node-fetch": "^2.6.1"
+    "@types/node-fetch": "^2.6.1",
+    "@types/prompt-sync": "^4.1.1",
+    "typescript": "^4.6.3"
   }
 }
