--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "tsc && node --experimental-specifier-resolution=node build/index"
+    "build": "tsc",
+    "start": "node --experimental-specifier-resolution=node build/index"
   },
   "repository": {
     "type": "git",
